# sss_swc11ac

./: CHANGELOG.md  CMakeLists.txt  README.md  version.h.in
cmake/: board.cmake  git.cmake  nrfjprog.cmake  platform.cmake  pristine.cmake  toolchain.cmake  version.cmake
cmake/board/: swc11xs.cmake
cmake/platform/: nrf51822_xxAC.cmake
cmake/sdk/: nRF5_SDK_11.cmake  project_sdk.cmake
cmake/toolchain/: armcc.cmake  clang.cmake  gccarmemb.cmake
linker/: nrf51822_xxAC.ld  nrf51822_xxAC.sct
sdk/boards/swc11xs/: board_swc11xs.h  boards.h
sdk/bsp/: bsp.h
sdk/libraries/at_cmdline/: at_cmdline.c  at_cmdline.h
sdk/libraries/crypto/aes_nrf51/: aes_nrf51.c
sdk/libraries/flash/mx25l16/: mx25l16.c  mx25l16.h
sdk/libraries/led/lp3944/: lp3944.c  lp3944.h
sdk/libraries/led/tg1929/: tg1929.c  tg1929.h
sdk/libraries/lorawan/openlora/Core/: lora.c  lora.h
sdk/libraries/lorawan/openlora/Crypto/: aes.h  cmac.c  cmac.h  tiny_aes128.c  tiny_aes128.h
sdk/libraries/lorawan/openlora/Mac/: LoRaMac.c  LoRaMac.h  LoRaMacCrypto.c
sdk/libraries/lorawan/openlora/Mac/region/: Region.c  Region.h  RegionAS923.c  RegionAS923.h  RegionAU915-Hybrid.c  RegionAU915-Hybrid.h  RegionAU915.c  RegionAU915.h  RegionCN470.c  RegionCN470.h  RegionCN779.c  RegionCN779.h  RegionCommon.c  RegionCommon.h  RegionEU433.c  RegionEU433.h  RegionEU868.c  RegionEU868.h  RegionIN865.c  RegionIN865.h  RegionKR920.c  RegionKR920.h  RegionSE800.c  RegionSE800.h  RegionUS915-Hybrid.c  RegionUS915-Hybrid.h  RegionUS915.c  RegionUS915.h
sdk/libraries/lorawan/openlora/Phy/: radio.h
sdk/libraries/lorawan/openlora/sx1276/: sx1276.c  sx1276.h
sdk/libraries/lorawan/platform/: region_platform.h  timer_platform.h
sdk/libraries/lorawan/selora/: LoRaMacFacCfg.c  LoRaMacFacCfg.h  LoRaMacFacCfg.proto  lora_transport.c  lora_transport.h  run_time.c  run_time.h  sx1276-board.c  sx1276-board.c.sip.bak  sx1276-board.h  sx1276-board.h.sip.bak
sdk/libraries/lorawan/selora/crypto/: aes.c  cmac.c  cmac.h
sdk/libraries/lorawan/selora/mac/: LoRaMac.c  LoRaMac.h  LoRaMacCrypto.c  LoRaMacCrypto.h
sdk/libraries/lorawan/selora/radio/: radio.h
sdk/libraries/lorawan/selora/radio/sx1272/: sx1272.c  sx1272.h
sdk/libraries/lorawan/sx127x_board/: sx1276_board.c  sx1276_board.h
sdk/libraries/lwshell/: lwshell.c  lwshell.h
sdk/libraries/nrf51/ble/ble_strm/: ble_strm.c  ble_strm.h  ble_strm_handler.c  ble_strm_handler.h
sdk/libraries/nrf51/ble_common/: ble_dfu.c  ble_handler.c  ble_handler.h  ble_nus.c  ble_nus.h  ble_nus_handler.c  ble_nus_handler.h  test_ble_handler.c
sdk/libraries/nrf51/nrf_list/: nrf_sortlist.c  nrf_sortlist.h
sdk/libraries/nrf51/nrf_ringbuffer/: nrf_ringbuf.c  nrf_ringbuf.h
sdk/libraries/nrf51/run_time/: run_time.c  run_time.h
sdk/libraries/nrf51/spi/: spi.c  spi.h
sdk/libraries/nrf51/storage/: storage.c  storage.h
sdk/libraries/nrf51/uart/: retarget.c  uart.c  uart.h
sdk/libraries/nrf51/wdt/: wdt.c  wdt.h
sdk/libraries/rtc/sd3078/: sd3078.c  sd3078.h  sd3078_sample.c
sdk/libraries/sensor/bma2x2/: bma2x2.c  bma2x2.h
sdk/libraries/sensor/lsm6dsl/: LSM6DSL_ACC_GYRO_driver_HL.h
sdk/libraries/sensor/opt3001/: opt3001.c  opt3001.h
sdk/libraries/sensor/sht2x/: sht2x.c  sht2x.h
sdk/libraries/sensor/sht3x/: sht3xd.c  sht3xd.h
sdk/libraries/sensor/veml6030/: veml6030.c  veml6030.h
sdk/libraries/sha1/: sha1.c  sha1.h
sdk/libraries/trace/: trace.c  trace.h  trace_disable.h
sdk/nRF5_SDK_11.0.0_89a8197/components/ble/ble_radio_notification/: ble_radio_notification.c  ble_radio_notification.h
sdk/nRF5_SDK_11.0.0_89a8197/components/drivers_nrf/pstorage/: pstorage_raw.c
sdk/nRF5_SDK_11.0.0_89a8197/components/drivers_nrf/uart/: nrf_drv_uart.c
sdk/nRF5_SDK_11.0.0_89a8197/components/libraries/fifo/: app_fifo.c  app_fifo.h
sdk/nRF5_SDK_11.0.0_89a8197/components/libraries/slip/: slip.c
sdk/nRF5_SDK_11.0.0_89a8197/components/libraries/timer/: app_timer.c  app_timer.h
sdk/nRF5_SDK_11.0.0_89a8197/components/libraries/uart/: app_uart_fifo.c  retarget.c
sdk/nRF5_SDK_11.0.0_89a8197/components/libraries/util/: app_error.c  app_error_weak.c  app_error_weak.h  app_util.h  nrf_log.c  nrf_log.h
src/: CMakeLists.txt  alpha_radio_handler.c  alpha_radio_handler.h  event_printf.c  factory_test.c  factory_test.h  main.c  normal_mode.c  normal_mode.h  shell_cmd.c  shell_cmd.h  timer.h
src/alpha_test/: alpha_cad.c  alpha_cad.h  alpha_cmds.c  alpha_cmds.h  alpha_ctx.c  alpha_ctx.h  alpha_drx.c  alpha_drx.h  alpha_fhrx.c  alpha_fhrx.h  alpha_fhtx.c  alpha_fhtx.h  alpha_multi_channel_cad.c  alpha_multi_channel_cad.h  alpha_ping.c  alpha_ping.h  alpha_pong.c  alpha_pong.h  alpha_rx.c  alpha_rx.h  alpha_tx.c  alpha_tx.h  rssi_test.c  rssi_test.h
src/base_test/: base_cmds.c  base_cmds.h  gpio_test.c  gpio_test.h  test_companion.c  test_companion.h
src/ble_test/: ble_cmds.c  ble_cmds.h  ble_ctx.c  ble_ctx.h  ble_dtm_test.c  ble_dtm_test.h  ble_mtx.c  ble_mtx.h  ble_ping.c  ble_ping.h  ble_pong.c  ble_pong.h  ble_radio_rx.c  ble_radio_rx.h  ble_radio_tx.c  ble_radio_tx.h  radio_config.c  radio_config.h
src/config/: board_alarm_host_v100.h  boards.h  nrf_drv_config.h  pstorage_platform.h  sw_cfg.h  user_cfg.h  version.h
src/ntshell/lib/core/: ntshell.c  vtrecv.c  vtrecv.h
src/ntshell/src/: shell_uart.c  shell_uart.h  usrcmd.c  usrcmd.h
src/serialization_lib/common/: ser_config.h
src/serialization_lib/common/transport/: ser_hal_transport.c
src/serialization_lib/common/transport/ser_phy/: ser_phy_nrf51_uart.c
src/serialization_lib/common/transport/ser_phy/config/: ser_phy_config_conn_nrf51.h
src/serialization_lib/connectivity/: ser_conn_cmd_decoder.c  ser_conn_handlers.c  ser_conn_pkt_decoder.c
src/serialization_lib/connectivity/codecs/common/: conn_mw.c  conn_mw.h
src/serialization_lib/connectivity/codecs/s130/middleware/: conn_mw_items.c
src/serialization_user/: alpha_ser_rx_dec.c  alpha_ser_rx_dec.h  alpha_ser_tx_enc.c  alpha_ser_tx_enc.h  ser_alpha.h  ser_conn_alpha_event_encoder.c  ser_conn_alpha_event_encorder.h
src/storage/: storage_handle.c  storage_handle.h
(+8 files in other folders)
